# 26-06-match

./: FACILITATOR_GUIDE.md  README.md  pyproject.toml
docs/brainstorms/: 2026-06-10-pattern-matching-session-requirements.md
docs/ideation/: 2026-06-10-pattern-matching-presentation-ideation.md
docs/plans/: 2026-06-10-001-feat-pattern-matching-workshop-plan.md
docs/presentation/: cross-language-intro.md  predict-handout.html
docs/presentation/slides/: README.md  index.html
src/adventure/: __init__.py  __main__.py  events.py  game.py  handlers_complete.py  handlers_level1.py  handlers_level2.py  handlers_level3.py  handlers_level4.py  sabotage_targets.py
tests/: test_game.py  test_level1_literal_wildcard.py  test_level2_capture_sequence.py  test_level3_or_guards.py  test_level4_class_patterns.py  test_sabotage_examples.py
